syntax = "proto3";

package comment.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "comment/api/comment/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.comment.v1";
option java_outer_classname = "CommentProtoV1";

// 评论服务定义
service Comment {
  // 创建评论
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse) {
    option (google.api.http) = {
      post: "/api/v1/comment"
      body: "*"
    };
  }
}

// 创建评论请求
message CreateCommentRequest {
  string user_id = 1;         // 用户id
  string username = 2;        // 用户名
  string avatar = 3;          // 头像
  string content = 4;         // 评论内容
  int32 module = 5;          // 模块名
  string resource_id = 6;     // 资源Id
  string root_comment_id = 7; // 根评论id
  string parent_comment_id = 8; // 父级评论id
  int32 level = 9;
}

message CreateCommentResponse {
  CommonResponse common = 1;
}

message CommonResponse {
  int32 code = 1;
  string message = 2;
  Data data = 3;
  string request_id = 4;
  int64 timestamp = 5;
}

message Data {
  string id = 1;
  string name = 2;
}